--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <junit.version>4.11</junit.version>
     <webots.version>R2023b</webots.version>
+    <javafx.version>12.0.2</javafx.version>
+    <xchart.version>3.8.7</xchart.version>
   </properties>
 
   <dependencies>
@@ -34,7 +36,12 @@
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-controls</artifactId>
-        <version>12.0.2</version>
+        <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.knowm.xchart</groupId>
+        <artifactId>xchart</artifactId>
+        <version>${xchart.version}</version>
     </dependency>
   </dependencies>
 
