--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <junit.version>4.11</junit.version>
     <webots.version>R2023b</webots.version>
     <javafx.version>12.0.2</javafx.version>
     <xchart.version>3.8.7</xchart.version>
@@ -23,10 +22,10 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.10.2</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.cyberbotics.webots</groupId>
